--- a/about.html
+++ b/about.html
@@ -214,6 +214,6 @@
     </div>
 </footer> -->
 
-<link rel="stylesheet" href="js/bootstrap.bundle.min.js">
+<script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
