--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="row align-items-center py-5  header__inner">
+            <div class="row align-items-center  py-5  header__inner">
                 <div class="col-12 col-md-6 navbar-expand-lg">
-                    <a class="navbar-brand header__inner-link" href="#">
+                    <a class=" header__inner-link" href="#">
                         <img class="header__inner-logo" src="images/JOGO.jpg" alt="Logo">
                     </a>
                 </div>
-                <div class="col-12 col-md-2 py-2 text-center header__address">
+                <div class="col-12 col-md-2 py-2  header__address">
                     <div class="header__address--texts">
                         <div class="  header__address-item">
                             
                             <span class="header__address-icon-vector"></span>
-                            <a href="#" class="header__address-location-vector">    Улица Исакеева,2а/2, Бишкек
+                            <a href="#" class="header__address-location-vector ">    Улица Исакеева,2а/2, Бишкек
                             </a>
                         </div>
                     </div>
                 </div>    
-                <div class="col-12 col-md-4 text-center header__address">
+                <div class="col-12 col-md-4 header__address">
                     <div class="header__address--texts">
                         <div class=" header__address-item">
                             <span class="header__address-icon-tell"></span>
@@ -44,28 +44,28 @@
                             </a>
                             <br>
                             <a href="#" class="header__address-location-email ">
-                                email: ivanivanov.@gmail.com
+                                email: ivanivanov.@gmail.com 
                             </a>
                         </div>
                     </div>
                 </div>
             </div>
-            <nav class=" header__navbar">
+            <nav class=" header__navbar text-center">
                 <ul class="nav  nav-justified header__navbar--menu">
                     <li class="nav-item header__navbar-item">
-                        <a href="#" class="nav-link header__navbar-link">Главная</a>
+                        <a href="#" class="header__navbar-link">Главная</a>
                     </li>
                     <li class="nav-item header__navbar-item">
-                        <a href="#" class="nav-link header__navbar-link">О компании</a>
+                        <a href="./about.html" class=" header__navbar-link">О компании</a>
                     </li>
                     <li class="nav-item header__navbar-item">
-                        <a href="#" class="nav-link header__navbar-link">Услуги</a>
+                        <a href="services.html" class=" header__navbar-link">Услуги</a>
                     </li>
                     <li class="nav-item header__navbar-item">
-                        <a href="#" class="nav-link header__navbar-link">Новоти</a>
+                        <a href="news.html" class=" header__navbar-link">Новоти</a>
                     </li>
                     <li class="nav-item header__navbar-item">
-                        <a href="#" class=" nav-link header__navbar-link">Контакты</a>
+                        <a href="contacts.html" class="  header__navbar-link">Контакты</a>
                     </li>
                 </ul>
             </nav>
