--- a/services.html
+++ b/services.html
@@ -62,7 +62,7 @@
                         <a href="services.html" class=" header__navbar-link">Услуги</a>
                     </li>
                     <li class="nav-item header__navbar-item">
-                        <a href="#" class=" header__navbar-link">Новоти</a>
+                        <a href="news.html" class=" header__navbar-link">Новоти</a>
                     </li>
                     <li class="nav-item header__navbar-item">
                         <a href="contacts.html" class="  header__navbar-link">Контакты</a>
