--- a/contacts.html
+++ b/contacts.html
@@ -25,7 +25,7 @@
                         <img class="header__inner-logo" src="images/JOGO.jpg" alt="Logo">
                     </a>
                 </div>
-                <div class="col-12 col-md-2 py-2  header__address">
+                <div class="col-12 col-md-3 py-2  header__address">
                     <div class="header__address--texts">
                         <div class="  header__address-item">
                             
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                 </div>    
-                <div class="col-12 col-md-4 header__address">
+                <div class="col-12 col-md-3 header__address">
                     <div class="header__address--texts">
                         <div class=" header__address-item">
                             <span class="header__address-icon-tell"></span>
@@ -167,52 +167,54 @@
             </div>
         </div> -->
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer ">
     <div class="container">
-        <div class="footer__content footer__content-logo">
-        <div class="footer__logo">
-            <a class="footer__logo-link" href="#">
-                <img class="footer__logo-img" src="./images/JOGO.jpg" alt="footer-logo">
-            </a>
-        </div>
-            <a href="#" class="footer__icons-facebook"></a>
-            <a href="#" class="footer__icons-twitter"></a>
-            <a href="#" class="footer__icons-telegram"></a>
-            <a href="#" class="footer__icons-instagram"></a>
-        </div>
-        <div class="footer__content">
-            <h2 class="footer__content-title">Навигация</h2>
-            <ul class="footer__content--links">
-                <li class="footer__content-link"><a href="#">Главная</a></li>
-                <li class="footer__content-link"><a href="#">О компании</a></li>
-                <li class="footer__content-link"><a href="#">Услуги</a></li>
-                <li class="footer__content-link"><a href="#">Новости</a></li>
-                <li class="footer__content-link"><a href="#">Контакты</a></li>
-            </ul>
-        </div>
-        <div class="footer__content">
-            <h2 class="footer__content-title"> Страница</h2>
-            <ul class="footer__content--links">
-                <li class="footer__content-link"><a href="#">О нас</a></li>
-                <li class="footer__content-link"><a href="#">Как мы работаем?</a> </li>
-                <li class="footer__content-link"><a href="#">Быстрая поддержка</a></li>
-                <li class="footer__content-link"><a href="#">Связаться с нами</a> </li>
-                <li class="footer__content-link"><a href="#">Конфиденциальность</a> </li>
-            </ul>
-        </div>
-        <div class="footer__content">
-            <h2 class="footer__content-title">Связаться с нами</h2>
-            <div class="footer__content--form">
-                <input class="footer__content-contact" type="text" placeholder="Полное имя"/>
-                <input class="footer__content-contact" type="text" placeholder="e-mail адрес"/>
-                <textarea class="footer__content-contact footer__content-contact-textarea" placeholder="Отправить сообщение"></textarea>
-                <button class="footer__content-contact footer__content-contact-button" type="button">Отправить</button>
+        <div class="row align-items-center ">
+            <div class="footer__logo py-5">
+                <a class="footer__logo-link" href="#">
+                    <img class="footer__logo-img" src="./images/JOGO.jpg" alt="footer-logo">
+                </a>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3 footer__content footer__content-logo ">
+                <a href="#" class="footer__icons-facebook"></a>
+                <a href="#" class="footer__icons-twitter"></a>
+                <a href="#" class="footer__icons-telegram"></a>
+                <a href="#" class="footer__icons-instagram"></a>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3  footer__content">
+                <h2 class="footer__content-title">Навигация</h2>
+                <ul class="footer__content--links">
+                    <li class="footer__content-link"><a href="./index.html">Главная</a></li>
+                    <li class="footer__content-link"><a href="about.html">О компании </a></li>
+                    <li class="footer__content-link"><a href="services.html">Услуги</a></li>
+                    <li class="footer__content-link"><a href="news.html">Новости</a></li>
+                    <li class="footer__content-link"><a href="contacts.html">Контакты</a></li>
+                </ul>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3 footer__content">
+                <h2 class="footer__content-title"> Страница</h2>
+                <ul class="footer__content--links">
+                    <li class="footer__content-link"><a href="#">О нас</a></li>
+                    <li class="footer__content-link"><a href="#">Как мы работаем?</a> </li>
+                    <li class="footer__content-link"><a href="#">Быстрая поддержка</a></li>
+                    <li class="footer__content-link"><a href="#">Связаться с нами</a> </li>
+                    <li class="footer__content-link"><a href="#">Конфиденциальность</a> </li>
+                </ul>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3  footer__content">
+                <h2 class="footer__content-title">Связаться с нами</h2>
+                <div class="footer__content--form">
+                    <input class="footer__content-contact" type="text" placeholder="Полное имя"/>
+                    <input class="footer__content-contact" type="text" placeholder="e-mail адрес"/>
+                    <textarea class="footer__content-contact footer__content-contact-textarea" placeholder="Отправить сообщение"></textarea>
+                    <button class="footer__content-contact footer__content-contact-button" type="button">Отправить</button>
+                </div>
             </div>
         </div>
 
-        <p class="copytext"> &copy;  2021. xxnameofcompanyxx. all rights reserved</p>
+        <p class="copytext "> &copy;  2021. xxnameofcompanyxx. all rights reserved</p>
     </div>
-</footer> -->
+</footer>
 <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
