add about bootstrap

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <div class="row align-items-center  py-5  header__inner">
                 <div class="col-12 col-md-6 navbar-expand-lg">
                     <a class=" header__inner-link" href="#">
-                        <img class="header__inner-logo" src="images/JOGO.jpg" alt="Logo">
+                        <img  src="images/JOGO.jpg" class="header__inner-logo" alt="Logo">
                     </a>
                 </div>
                 <div class="col-12 col-md-3 py-2  header__address">
@@ -71,7 +71,75 @@
             </nav>
         </div>
     </header>
-    <main class="main">
+    <main class="main__about">
+        <section class="about-first">
+            <div class="container">
+            <div class="row align-items-center about-first__content py-5">
+                <div class="col-12 col-md-6 about-first__texts">
+                    <h2 class="about-first__texts-title">О Компании</h2>
+                    <p class="about-first__texts-text">
+                        SoftVoya началась с маленького IT отдела внутри Raiffeisen Group в 2016 и выросла до самостоятельной компании из 100 сотрудников в 2020. Мы – инженеры, дизайнеры и менеджеры, которые увлечены своим делом и полностью погружаются в проект клиента для достижения лучшего результата. Компания быстро растет и нам нужны новые люди.
+                    </p>
+                    <p class="about-first__texts-word">
+                        Актуальный список открытых вакансий <b class="about-first__texts-link">здесь</b>
+                    </p>
+                    <img  src="./images/images-about/diagramm-about.png" class="w-100 about-first__diagramm-img" alt="diagramm-about">
+                </div>
+                <div class="col-6 col-md-3 about-first__images ">
+                    <img src="images/images-about/about-us-1.png"  class="w-100 about-first__img" alt="about-img">
+                </div>
+                <div class="col-6 col-md-3 about-first__images ">
+                    <img src="images/images-about/about-us-2.png" class="w-100 about-first__img" alt="about-img">
+                </div>
+            </div>
+            </div>
+        </section>
+        <section class="about-second">
+            <div class="container">
+            <div class="row about-second__content py-5 align-items-center">
+                <div class="col-12 col-md-6 about-second__images ">
+                    <img src="images/images-about/illustration-info.png"  class="w-100 about-second__img" alt="about-img">
+                </div>
+                <div class="col-12 col-md-6 about-second__texts">
+                    <p class="about-first__texts-text">
+                        Наша команда реализовала более 100 проектов для клиентов из России, Казахстана, США и Западной Европы в сферах финансы, юридические услуги, страхование, медицина, недвижимость, туризм. Мы помогаем масштабировать бизнес: автоматизируем и оцифруем процессы, разработаем индивидуальный софт, интегрируем массовые решения и поможем управлять подрядчиками в нашей CRM-системе, Upservice.
+                    </p>
+                </div>
+            </div>
+            </div>
+        </section>
+        <section class="about-third">
+            <div class="container">
+            <div class="row align-items-center about-third__content py-5">
+                <div class="col-6 col-md-3 about-third__images ">
+                    <img src="images/images-about/about-us-3.png"  class="w-100 about-third__img" alt="about-img">
+                </div>
+                <div class="col-6 col-md-3 about-third__images ">
+                    <img src="images/images-about/about-us-4.png" class="w-100 about-third__img" alt="about-img">
+                </div>
+                <div class="col-12 col-md-6 about-third__texts">
+                    <img  src="./images/images-about/diagramm-2-about.png" class="w-100 p-5 about-third__diagramm-img" alt="diagramm-about">
+                    <p class="about-third__texts-text">
+                        Команда SoftVoya постоянно развивает профессиональные навыки, посещая митапы, конференции и курсы. Для применения полученных знаний на практике, мы создали небольшую лабораторию, где работаем над внутренними проектами.
+                    </p>
+                </div>
+            </div>
+            </div>
+        </section>
+        <section class="about-fourth">
+            <div class="container">
+            <div class="row about-fourth__content py-5 align-items-center">
+                <div class="col-12 col-md-6 about-fourth__images ">
+                    <img src="images/images-about/about-us-docs 1.png"  class="w-100 about-fourth__img" alt="about-img">
+                </div>
+                <div class="col-12 col-md-6 about-fourth__texts">
+                    <p class="about-fourth__texts-text">
+                        Наши собственные курсы проектного менеджмента, методологии agile и DevOps позволяют команде оценивать работу в ретроспективе, улучшать процессы и координировать будущие стратегии.
+                    </p>
+                </div>
+            </div>
+            </div>
+        </section>
         
         <!-- 
         <section class="main__hero ">
@@ -167,21 +235,21 @@
             </div>
         </div> -->
     </main>
-    <footer class="footer ">
+    <footer class="footer  ">
     <div class="container">
-        <div class="row align-items-center ">
-            <div class="footer__logo py-5">
+        <div class="row align-items-center py-5">
+            <div class="col-12 col-md-6 col-lg-3 footer__content footer__content-logo ">
+            <div class="footer__logo ">
                 <a class="footer__logo-link" href="#">
-                    <img class="footer__logo-img" src="./images/JOGO.jpg" alt="footer-logo">
+                    <img class="w-100 footer__logo-img" src="./images/JOGO.jpg" alt="footer-logo">
                 </a>
             </div>
-            <div class="col-12 col-md-6 col-lg-3 footer__content footer__content-logo ">
-                <a href="#" class="footer__icons-facebook"></a>
+                <a href="https://www.facebook.com/profile.php?id=100043791373012" class="footer__icons-facebook"></a>
                 <a href="#" class="footer__icons-twitter"></a>
-                <a href="#" class="footer__icons-telegram"></a>
-                <a href="#" class="footer__icons-instagram"></a>
+                <a href="https://web.telegram.org/k/" class="footer__icons-telegram"></a>
+                <a href="https://www.instagram.com/jyldyzacademy/?hl=ru" class="footer__icons-instagram"></a>
             </div>
-            <div class="col-12 col-md-6 col-lg-3  footer__content">
+            <div class="col-12 col-md-6 col-lg-2  footer__content">
                 <h2 class="footer__content-title">Навигация</h2>
                 <ul class="footer__content--links">
                     <li class="footer__content-link"><a href="./index.html">Главная</a></li>
@@ -201,7 +269,7 @@
                     <li class="footer__content-link"><a href="#">Конфиденциальность</a> </li>
                 </ul>
             </div>
-            <div class="col-12 col-md-6 col-lg-3  footer__content">
+            <div class="col-12 col-md-6 col-lg-4  footer__content">
                 <h2 class="footer__content-title">Связаться с нами</h2>
                 <div class="footer__content--form">
                     <input class="footer__content-contact" type="text" placeholder="Полное имя"/>
@@ -215,52 +283,6 @@
         <p class="copytext "> &copy;  2021. xxnameofcompanyxx. all rights reserved</p>
     </div>
 </footer>
-    <!-- <footer class="footer">
-    <div class="container">
-        <div class="footer__content footer__content-logo">
-        <div class="footer__logo">
-            <a class="footer__logo-link" href="#">
-                <img class="footer__logo-img" src="./images/JOGO.jpg" alt="footer-logo">
-            </a>
-        </div>
-            <a href="#" class="footer__icons-facebook"></a>
-            <a href="#" class="footer__icons-twitter"></a>
-            <a href="#" class="footer__icons-telegram"></a>
-            <a href="#" class="footer__icons-instagram"></a>
-        </div>
-        <div class="footer__content">
-            <h2 class="footer__content-title">Навигация</h2>
-            <ul class="footer__content--links">
-                <li class="footer__content-link"><a href="#">Главная</a></li>
-                <li class="footer__content-link"><a href="#">О компании</a></li>
-                <li class="footer__content-link"><a href="#">Услуги</a></li>
-                <li class="footer__content-link"><a href="#">Новости</a></li>
-                <li class="footer__content-link"><a href="#">Контакты</a></li>
-            </ul>
-        </div>
-        <div class="footer__content">
-            <h2 class="footer__content-title"> Страница</h2>
-            <ul class="footer__content--links">
-                <li class="footer__content-link"><a href="#">О нас</a></li>
-                <li class="footer__content-link"><a href="#">Как мы работаем?</a> </li>
-                <li class="footer__content-link"><a href="#">Быстрая поддержка</a></li>
-                <li class="footer__content-link"><a href="#">Связаться с нами</a> </li>
-                <li class="footer__content-link"><a href="#">Конфиденциальность</a> </li>
-            </ul>
-        </div>
-        <div class="footer__content">
-            <h2 class="footer__content-title">Связаться с нами</h2>
-            <div class="footer__content--form">
-                <input class="footer__content-contact" type="text" placeholder="Полное имя"/>
-                <input class="footer__content-contact" type="text" placeholder="e-mail адрес"/>
-                <textarea class="footer__content-contact footer__content-contact-textarea" placeholder="Отправить сообщение"></textarea>
-                <button class="footer__content-contact footer__content-contact-button" type="button">Отправить</button>
-            </div>
-        </div>
-
-        <p class="copytext"> &copy;  2021. xxnameofcompanyxx. all rights reserved</p>
-    </div>
-</footer> -->
 <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
