--- a/services.html
+++ b/services.html
@@ -176,10 +176,10 @@
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-3 footer__content footer__content-logo ">
-                <a href="#" class="footer__icons-facebook"></a>
+                <a href="https://www.facebook.com/profile.php?id=100043791373012" class="footer__icons-facebook"></a>
                 <a href="#" class="footer__icons-twitter"></a>
-                <a href="#" class="footer__icons-telegram"></a>
-                <a href="#" class="footer__icons-instagram"></a>
+                <a href="https://web.telegram.org/k/" class="footer__icons-telegram"></a>
+                <a href="https://www.instagram.com/jyldyzacademy/?hl=ru" class="footer__icons-instagram"></a>
             </div>
             <div class="col-12 col-md-6 col-lg-3  footer__content">
                 <h2 class="footer__content-title">Навигация</h2>
