--- a/index.html
+++ b/index.html
@@ -165,21 +165,21 @@
             </div>
         </div>
     </main>
-    <footer class="footer ">
+    <footer class="footer  ">
     <div class="container">
-        <div class="row align-items-center ">
-            <div class="footer__logo py-5">
+        <div class="row align-items-center py-5">
+            <div class="col-12 col-md-6 col-lg-3 footer__content footer__content-logo ">
+            <div class="footer__logo ">
                 <a class="footer__logo-link" href="#">
-                    <img class="footer__logo-img" src="./images/JOGO.jpg" alt="footer-logo">
+                    <img class="w-100 footer__logo-img" src="./images/JOGO.jpg" alt="footer-logo">
                 </a>
             </div>
-            <div class="col-12 col-md-6 col-lg-3 footer__content footer__content-logo ">
-                <a href="#" class="footer__icons-facebook"></a>
+                <a href="https://www.facebook.com/profile.php?id=100043791373012" class="footer__icons-facebook"></a>
                 <a href="#" class="footer__icons-twitter"></a>
-                <a href="#" class="footer__icons-telegram"></a>
-                <a href="#" class="footer__icons-instagram"></a>
+                <a href="https://web.telegram.org/k/" class="footer__icons-telegram"></a>
+                <a href="https://www.instagram.com/jyldyzacademy/?hl=ru" class="footer__icons-instagram"></a>
             </div>
-            <div class="col-12 col-md-6 col-lg-3  footer__content">
+            <div class="col-12 col-md-6 col-lg-2  footer__content">
                 <h2 class="footer__content-title">Навигация</h2>
                 <ul class="footer__content--links">
                     <li class="footer__content-link"><a href="./index.html">Главная</a></li>
@@ -199,7 +199,7 @@
                     <li class="footer__content-link"><a href="#">Конфиденциальность</a> </li>
                 </ul>
             </div>
-            <div class="col-12 col-md-6 col-lg-3  footer__content">
+            <div class="col-12 col-md-6 col-lg-4  footer__content">
                 <h2 class="footer__content-title">Связаться с нами</h2>
                 <div class="footer__content--form">
                     <input class="footer__content-contact" type="text" placeholder="Полное имя"/>
