add contacts bootstrap

--- a/about.html
+++ b/about.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT Consulting</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.min.css">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,6 +12,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Condensed&family=Roboto+Slab&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
     <header class="header">
@@ -81,14 +81,14 @@
                         SoftVoya началась с маленького IT отдела внутри Raiffeisen Group в 2016 и выросла до самостоятельной компании из 100 сотрудников в 2020. Мы – инженеры, дизайнеры и менеджеры, которые увлечены своим делом и полностью погружаются в проект клиента для достижения лучшего результата. Компания быстро растет и нам нужны новые люди.
                     </p>
                     <p class="about-first__texts-word">
-                        Актуальный список открытых вакансий <b class="about-first__texts-link">здесь</b>
+                        Актуальный список открытых вакансий <a href="https://devkg.com/ru/jobs" class="about-first__texts-link">здесь</a>
                     </p>
                     <img  src="./images/images-about/diagramm-about.png" class="w-100 about-first__diagramm-img" alt="diagramm-about">
                 </div>
-                <div class="col-6 col-md-3 about-first__images ">
+                <div class="col-6 col-md-3 about-first__images-first ">
                     <img src="images/images-about/about-us-1.png"  class="w-100 about-first__img" alt="about-img">
                 </div>
-                <div class="col-6 col-md-3 about-first__images ">
+                <div class="col-6 col-md-3 about-first__images-second ">
                     <img src="images/images-about/about-us-2.png" class="w-100 about-first__img" alt="about-img">
                 </div>
             </div>
@@ -101,7 +101,7 @@
                     <img src="images/images-about/illustration-info.png"  class="w-100 about-second__img" alt="about-img">
                 </div>
                 <div class="col-12 col-md-6 about-second__texts">
-                    <p class="about-first__texts-text">
+                    <p class="about-second__texts-text">
                         Наша команда реализовала более 100 проектов для клиентов из России, Казахстана, США и Западной Европы в сферах финансы, юридические услуги, страхование, медицина, недвижимость, туризм. Мы помогаем масштабировать бизнес: автоматизируем и оцифруем процессы, разработаем индивидуальный софт, интегрируем массовые решения и поможем управлять подрядчиками в нашей CRM-системе, Upservice.
                     </p>
                 </div>
@@ -111,7 +111,7 @@
         <section class="about-third">
             <div class="container">
             <div class="row align-items-center about-third__content py-5">
-                <div class="col-6 col-md-3 about-third__images ">
+                <div class="col-6 col-md-3 about-third__images-first ">
                     <img src="images/images-about/about-us-3.png"  class="w-100 about-third__img" alt="about-img">
                 </div>
                 <div class="col-6 col-md-3 about-third__images ">
