--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT Consulting</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,6 +12,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Condensed&family=Roboto+Slab&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
     <header class="header">
@@ -76,7 +76,7 @@
             <div class="container">
                 <div class="main__hero--button">
                 <h2 class="main__hero-note">Мы одним из многочисленных направлений консалтинга  в мире </h2>      
-                    <a class="main__hero-link" href="#">Узнать больше</a>
+                    <a class="main__hero-link" href="about.html">Узнать больше</a>
                 </div>
                 <img class="main__hero-img" src="images/it-consulting.jpg" alt="it-consulting.jpg">
             </div>
@@ -90,19 +90,19 @@
                     <img src="images/img.jpg" class="services__image services__image-first"   alt="services-img">
                         
                     <h3 class="services__subtitle">Аудит IT-инфраструктуры </h3>
-                    <a href="#" class="services__subtitle-button">Оставить заявку</a>
+                    <a href="services.html" class="services__subtitle-button">Оставить заявку</a>
                 </div>
                 <div class="services__part ">
                     <img src="images/img2.jpg"  class="services__image services__image-second" alt="services-img">
                    
                     <h3 class="services__subtitle">Консалтинг</h3>
-                    <a href="#" class="services__subtitle-button">Оставить заявку</a>
+                    <a href="services.html" class="services__subtitle-button">Оставить заявку</a>
                 </div>
                 <div class="services__part ">
                     <img src="images/img3.jpg" class="services__image services__image-third" alt="services-img">
 
                     <h3 class="services__subtitle">Разработка IT стратегии</h3>
-                    <a href="#" class="services__subtitle-button">Оставить заявку</a>
+                    <a href="services.html" class="services__subtitle-button">Оставить заявку</a>
                 </div>
             </div>
             </div>
