--- a/news.html
+++ b/news.html
@@ -17,52 +17,45 @@
     <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header ">
         <div class="container">
-            <div class="row align-items-center  py-5  header__inner">
-                <div class="col-12 col-md-6 navbar-expand-lg">
-                    <a class=" header__inner-link" href="#">
-                        <img class="header__inner-logo" src="images/JOGO.jpg" alt="Logo">
+            <div class=" align-items-center  py-5 navbar  header__inner">
+                    <a class=" header__inner-link" href="./index.html">
+                        <img  src="images/JOGO.jpg" class="w-100 header__inner-logo" alt="Logo">
                     </a>
-                </div>
-                <div class="col-12 col-md-3 py-2  header__address">
-                    <div class="header__address--texts">
-                        <div class="  header__address-item">
-                            
-                            <span class="header__address-icon-vector"></span>
-                            <a href="#" class="header__address-location-vector ">    Улица Исакеева,2а/2, Бишкек
-                            </a>
-                        </div>
+
+                <div class="py-2  header__address">
+                    <div class="header__address-text">
+                        <a href="./contacts.html" class="header__address-location ">    
+                            Улица Исакеева,2а/2, Бишкек
+                        </a>
                     </div>
-                </div>    
-                <div class="col-12 col-md-3 header__address">
-                    <div class="header__address--texts">
-                        <div class=" header__address-item">
-                            <span class="header__address-icon-tell"></span>
-                            <a href="#" class=" header__address-location-tell ">
-                                tell:      +996 709 11 10 11 
-                            </a>
-                            <br>
-                            <a href="#" class="header__address-location-email ">
-                                email: ivanivanov.@gmail.com 
-                            </a>
-                        </div>
+                    <div class="header__address-text">
+                        <a href="tell:+996709603067" class="header__address-location ">
+                            тел:+996 709 60 30 67
+                        </a>
+                    </div>
+                    <div class="header__address-text">
+                        <a href="mailto: 
+                        ivanivanov@gmail.com" class="header__address-location ">
+                            почта: ivanov.ivanivanivich.@gmail.com 
+                        </a>
                     </div>
                 </div>
             </div>
             <nav class=" header__navbar text-center">
                 <ul class="nav  nav-justified header__navbar--menu">
                     <li class="nav-item header__navbar-item">
-                        <a href="index.html" class="header__navbar-link">Главная</a>
+                        <a href="index.html" class=" header__navbar-link">Главная</a>
                     </li>
                     <li class="nav-item header__navbar-item">
-                        <a href="about.html" class=" header__navbar-link">О компании</a>
+                        <a href="about.html" class="  header__navbar-link">О компании </a>
                     </li>
                     <li class="nav-item header__navbar-item">
                         <a href="services.html" class=" header__navbar-link">Услуги</a>
                     </li>
                     <li class="nav-item header__navbar-item">
-                        <a href="news.html" class=" header__navbar-link">Новоти</a>
+                        <a href="./news.html" class="  header__navbar-link">Новоти</a>
                     </li>
                     <li class="nav-item header__navbar-item">
                         <a href="contacts.html" class="  header__navbar-link">Контакты</a>
@@ -129,7 +122,7 @@
         <div class="row align-items-center py-5">
             <div class="col-12 col-md-6 col-lg-3 footer__content footer__content-logo ">
             <div class="footer__logo ">
-                <a class="footer__logo-link" href="#">
+                <a class="footer__logo-link" href="./index.html">
                     <img class="w-100 footer__logo-img" src="./images/JOGO.jpg" alt="footer-logo">
                 </a>
             </div>
