add index bootstrap-2

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <div class="why__icon"><img class="w-100" src="images/why3.png" alt=""></div>
                             <p class="why__text">
                             <h3 class="why__text-title">Прозрачное ценообразование
-                            </h3> Оставляйте заявку на сайте и получите стоимость услуг и оценку работ для вашей компнии.
+                            </h3> Оставляйте заявку на сайте и получите стоимость услуг и оценку работ для вашей комaпни.
                             </p>
                     </li>
 
